--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-/* line 3, scss/_general.scss */body{background-color:#39b54a}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap");/* line 3, scss/_general.scss */body{background-color:#423c6d}
