--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,5 +1,448 @@
 @import 'guide';
 
+::selection {
+   background: $color-primary;
+   color: $color-white;
+}
+
 body {
    background-color: $color-context-1;
+   background-image: url(../assets/img/ilustra_inicial.png);
+   background-blend-mode: color-dodge;
+   background-repeat: no-repeat;
+   overflow-x: hidden;
+   font-family: 'Roboto', sans-serif;
 }
+
+// Header
+header {
+   margin-top: 1rem;
+   .container {
+      display: flex;
+      justify-content: space-between;
+      align-content: center;
+      align-items: center;
+   }
+}
+.menu, footer .info-footer-2 {
+   ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      li {
+         display: inline;
+         margin: 0 1rem 0 0;
+         a {
+            color: $color-white;
+            @include fontSize(16px);
+            font-weight: 400;
+            @include transition(all 0.3s ease-in-out 0s);
+            &:hover {
+               color: $color-primary;
+               text-decoration: none;
+            }
+         }
+      }
+   }
+}
+
+// Button CTA
+.cta {
+   @extend %btn-structure;
+}
+
+// Main
+main {
+   margin-top: 7rem;
+   @include height(750px);
+   h1 {
+      color: $color-primary;
+      @include fontSize(96px);
+      font-weight: 900;
+      margin-top: 3rem;
+   }
+   p {
+      color: $color-white;
+      @include fontSize(32px);
+      font-weight: 400;
+      display: block;
+      margin-bottom: 4rem;
+   }
+   .link-scroll {
+      color: $color-context-3;
+      @include fontSize(16px);
+      font-weight: 400;
+      @include transition(all 0.3s ease-in-out 0s);
+      &::before {
+         @include width(32px);
+         @include height(32px);
+         content: url(../assets/svg/ico_seta_baixo.svg);
+         position: relative;
+         top: .7rem;
+         margin-right: .5rem;
+      }
+      &:hover {
+         text-decoration: none;
+         opacity: .8;
+      }
+   }
+   .img-entrada {
+      top: -5%;
+      right: -5%;
+      position: relative;
+   }
+}
+
+// O que define a BEEBOX?
+.content-1 {
+   width: 100%;
+   @include height(285px);
+   background-color: $color-context-2;
+   border-top-left-radius: 1rem;
+   border-bottom-left-radius: 1rem;
+   border-top-right-radius: 1rem;
+   border-bottom-right-radius: 10rem;
+}
+
+// Serviços
+.content-2 {
+   .servico {
+      @include height(389px);
+      border: 1px solid $color-primary;
+      border-top-right-radius: 128px;
+      border-bottom-left-radius: 128px;
+      margin-bottom: 4rem;
+      position: relative;
+      .ico-servico {
+         position: absolute;
+         @include width(64px);
+         @include height(56px);
+         background-color: $color-primary;
+         border-top-right-radius: 1rem;
+         border-bottom-left-radius: 1rem;
+         left: -10%;
+         top: -10%;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         @include box-shadow(0px 16px 24px rgba($color-context-1, 1));
+         img {
+            @include width(32px);
+            @include height(32px);
+         }
+      }
+      h3 {
+         color: $color-primary;
+         @include fontSize(32px);
+         font-weight: 700;
+         padding: 1rem;
+      }
+      p {
+         color: $color-white;
+         @include fontSize(16px);
+         font-weight: 400;
+         line-height: 30px;
+         padding: 0rem 1rem 0 2rem;
+      }
+   }
+}
+
+// Cases
+.case {
+   margin-bottom: 2rem;
+   .case-img {
+      width: 100%;
+      @include height(397px);
+      background-color: $color-primary;
+      border-top-left-radius: 5rem;
+      border-bottom-right-radius: 5rem;
+      margin-bottom: .8rem;
+      overflow: hidden;
+   }
+   .case-content {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      span {
+         color: $color-primary;
+         @include fontSize(16px);
+         font-weight: 700;
+         text-transform: uppercase;
+         letter-spacing: 0.2rem;
+      }
+      h3 {
+         color: $color-primary;
+         @include fontSize(32px);
+         font-weight: 700;
+         margin-top: 1rem;
+         border-bottom: 1px solid $color-primary;
+      }
+   }
+}
+
+// Quote
+.quote {
+   width: 95%;
+   @include height(327px);
+   border-top-left-radius: 10rem;
+   position: relative;
+   left: 5%;
+   background-color: $color-context-2;
+   > div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      blockquote {
+         color: $color-white;
+         @include fontSize(40px);
+         font-weight: 400;
+         line-height: 40px;
+         text-align: center;
+         min-width: 90%;
+         margin-top: 5rem;
+      }
+      .author {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         img {
+            margin-right: 1rem;
+         }
+         h3 {
+            color: $color-primary;
+            @include fontSize(24px);
+            font-weight: 700;
+         }
+      }
+      
+   }
+}
+
+// CTA-section
+.cta-section {
+   width: 95%;
+   @include height(327px);
+   border-bottom-right-radius: 10rem;
+   position: relative;
+   right: 0.1%;
+   border: 1px solid $color-context-2;
+   > div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      h2 {
+         color: $color-white;
+         @include fontSize(64px);
+         font-weight: 900;
+         margin-top: 5rem;
+         margin-bottom: 1rem;
+      }
+   }
+}
+
+// Comentários clientes
+.comment {
+   position: relative;
+   &::before {
+      position: absolute;
+      content: url(../assets/img/img_aspas.png);
+      top: -12%;
+   }
+   > p {
+      color: $color-white;
+      @include fontSize(16px);
+      font-weight: 400;
+      line-height: 30px;
+   }
+   .author-comment {
+      img {
+         margin-right: .5rem;
+      }
+      .author-name {
+         color: $color-primary;
+         @include fontSize(16px);
+         font-weight: 700;
+      }
+      .author-company {
+         color: $color-white;
+         @include fontSize(16px);
+         font-weight: 400;
+      }
+   }
+}
+
+// 5 motivos marketing
+.content-5 {
+   width: 90%;
+   background-color: rgba($color-context-2, .5);
+   border-top-left-radius: 10rem;
+   border-bottom-right-radius: 10rem;
+   padding: 3rem;
+   > div > div {
+      margin-bottom: 5rem;
+   }
+   > div > div > h3 {
+      color: $color-primary;
+      @include fontSize(48px);
+      font-weight: 900;
+      text-align: center;
+      opacity: .8;
+   }
+   > div > div > p {
+      color: $color-white;
+      @include fontSize(24px);
+      font-weight: 400;
+      text-align: center;
+   }
+   .font {
+      color: $color-white;
+      @include fontSize(16px);
+      font-weight: 300;
+      text-align: center;
+      &::before {
+         @include width(24px);
+         @include height(24px);
+         content: url(../assets/svg/ico_like.svg);
+         position: relative;
+         top: .2rem;
+         margin-right: .5rem;
+      }
+   }
+}
+
+// CTA-sectio 2
+.cta-section-2 {
+   width: 95%;
+   @include height(327px);
+   border-bottom-left-radius: 10rem;
+   position: relative;
+   left: 5%;
+   position: relative;
+   background-color: $color-context-2;
+   > div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      align-content: center;
+      h2 {
+         color: $color-white;
+         @include fontSize(40px);
+         font-weight: 900;
+         margin-top: 7rem;
+         margin-bottom: 1rem;
+      }
+   }
+}
+
+// Rodapé
+footer {
+   background-color: rgba(59, 56, 95, 1);
+   background-image: url(../assets/img/ilustra_rodape.png);
+   background-blend-mode: color-dodge;
+   background-repeat: no-repeat;
+   background-position: top right;
+   .info-footer-1, .info-footer-2 {
+      display: flex;
+      justify-content: space-between;
+      align-content: center;
+      align-items: center;
+      padding: 3rem 0 3rem 0;
+      ul {
+         list-style: none;
+         padding: 0;
+         margin: 0;
+         li {
+            list-style: none;
+            display: inline;
+         }
+      }
+   }
+   .info-footer-1 {
+      border-bottom: 1px solid rgba($color-primary, .3);
+      .slogan {
+         color: $color-primary;
+         @include fontSize(24px);
+         font-weight: 900;
+         text-transform: uppercase;
+      }
+      .redes-sociais {
+         img {
+            margin-left: 1rem;
+         }
+      }
+   }
+   .info-footer-2 {
+      .contatos {
+         li {
+            &:first-child {
+               &::before {
+                  @include width(24px);
+                  @include height(24px);
+                  top: .5rem;
+                  margin-right: .5rem;
+                  content: url(../assets/svg/ico_email.svg);
+                  position: relative;
+               }
+            }
+            &:last-child {
+               &::before {
+                  @include width(24px);
+                  @include height(24px);
+                  top: .5rem;
+                  margin-right: .5rem;
+                  content: url(../assets/svg/ico_phone.svg);
+                  position: relative;
+               }
+            }
+         }
+      }
+   }
+}
+
+// Gerais
+section > h2 {
+   color: $color-primary;
+   @include fontSize(48px);
+   font-weight: 700;
+   margin-bottom: 5rem;
+   text-align: center;
+}
+
+.content-1, .content-2, .content-3, .cta-section, .content-4, .cta-section-2, .contact {
+   margin-bottom: 10rem;
+}
+
+a {
+   &:hover {
+      text-decoration: none;
+   }
+}
+
+@keyframes flickerAnimation {
+   0%   { opacity:1; }
+   50%  { opacity:0; }
+   100% { opacity:1; }
+ }
+ @-o-keyframes flickerAnimation{
+   0%   { opacity:1; }
+   50%  { opacity:0; }
+   100% { opacity:1; }
+ }
+ @-moz-keyframes flickerAnimation{
+   0%   { opacity:1; }
+   50%  { opacity:0; }
+   100% { opacity:1; }
+ }
+ @-webkit-keyframes flickerAnimation{
+   0%   { opacity:1; }
+   50%  { opacity:0; }
+   100% { opacity:1; }
+ }
+ .animate-flicker {
+    -webkit-animation: flickerAnimation 1s infinite;
+    -moz-animation: flickerAnimation 1s infinite;
+    -o-animation: flickerAnimation 1s infinite;
+     animation: flickerAnimation 1s infinite;
+ }
