--- a/scss/_guide.scss
+++ b/scss/_guide.scss
@@ -5,7 +5,7 @@ $color-black: rgb(0, 0, 0);
 $color-support: rgba(25, 24, 25, 1);
 $color-context-1: rgba(66, 60, 109, 1);
 $color-context-2: rgba(112, 102, 186, 1);
-$color-context-2: rgba(183, 167, 214, 1);
+$color-context-3: rgba(183, 167, 214, 1);
 
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
@@ -52,17 +52,20 @@ $color-context-2: rgba(183, 167, 214, 1);
 
 // Components
 %btn-structure {
-    padding: .5rem 1rem;
+    padding: 1rem 1.5rem;
     border-radius: 4rem;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     @include fontSize(16px);
     font-weight: 700;
-    color: $color_white;
+    background-color: $color-primary;
+    color: $color-black;
     text-transform: uppercase;
+    @include box-shadow(0px 8px 16px rgba($color-primary, 0.14));
     @include transition(all 0.3s ease-in-out 0s);
     &:hover {
         text-decoration: none;
-        color: $color_white;
+        color: $color-black;
+        @include box-shadow(0px 10px 20px rgba($color-primary, 0.18));
     }
 }
 
