--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -102,6 +102,32 @@ main {
    border-bottom-left-radius: 1rem;
    border-top-right-radius: 1rem;
    border-bottom-right-radius: 10rem;
+   > div {
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      align-items: center;
+      padding: 6rem 1rem 0 4rem;
+   }
+   .define h2 {
+      color: $color-primary;
+      @include fontSize(40px);
+      font-weight: 900;
+   }
+   .items-define {
+      ul {
+         list-style: none;
+         padding: 0;
+         margin: 0 0 1rem 2rem;
+         li {
+            display: inline;
+            margin-right: 2rem;
+            color: $color-white;
+            @include fontSize(24px);
+            font-weight: 400;
+         }
+      }
+   }
 }
 
 // Serviços
@@ -326,12 +352,57 @@ main {
       justify-content: space-between;
       align-items: center;
       align-content: center;
+      flex-direction: column;
       h2 {
          color: $color-white;
          @include fontSize(40px);
          font-weight: 900;
-         margin-top: 7rem;
+         margin-top: 4.5rem;
+         margin-bottom: 2rem;
+         text-align: center;
+      }
+   }
+}
+
+// Contato
+.img-contact {
+   width: 100%;
+   overflow: hidden;
+   border-top-right-radius: 1rem;
+   border-bottom-left-radius: 1rem;
+   border-bottom-right-radius: 10rem;
+}
+.form {
+   h2 {
+      text-align: left !important;
+   }
+   form {
+      .input-group {
+         display: flex;
+         flex-direction: column;
          margin-bottom: 1rem;
+      }
+      .input-group > label {
+         color: $color-white;
+         @include fontSize(20px);
+         font-weight: 400;
+      }
+      .input-group > input {
+         width: 100%;
+         @include height(48px);
+         border-radius: 4px;
+         border: none;
+      }
+      .input-group > textarea {
+         width: 100%;
+         @include height(256px);
+         border-radius: 4px;
+         margin-bottom: 2rem;
+      }
+      input[type="button"] {
+         width: 100%;
+         border: none;
+         @extend %btn-structure;
       }
    }
 }
@@ -402,7 +473,7 @@ footer {
 }
 
 // Gerais
-section > h2 {
+section > h2, .contact .form h2 {
    color: $color-primary;
    @include fontSize(48px);
    font-weight: 700;
