--- a/scss/_guide.scss
+++ b/scss/_guide.scss
@@ -67,6 +67,10 @@ $color-context-3: rgba(183, 167, 214, 1);
         color: $color-black;
         @include box-shadow(0px 10px 20px rgba($color-primary, 0.18));
     }
+    @media (max-width: 767px) {
+        padding: 1rem 1rem;
+        @include fontSize(14px);
+    }
 }
 
 %icon-before {
