--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -155,22 +155,25 @@ main {
    @include fontSize(20px);
    width: 3rem;
    height: 3rem;
-   border-radius: 6rem;
+   border-radius: .5rem;
    background: $color-primary;
    @include transition(all 0.3s ease-in-out 0s);
-   @include box-shadow(0px 8px 16px rgba($color-primary, 0.14));
+   @include box-shadow(0px 8px 16px rgba($color-primary, 0.24));
+   transform: rotate(45deg);
    &:hover {
       background-color: $color-primary;
       filter: brightness(80%);
    }
    &::after {
+      transform: rotate(-45deg);
+      display: block;
       content: '\f062';
       font-family: FontAwesome;
       @include width(20px);
       @include height(20px);
       color: $color-context-1;
-      left: .9rem;
-      top: .5rem;
+      left: .7rem;
+      top: .6rem;
       position: relative;
    }
 }
