--- a/scss/_media-querie.scss
+++ b/scss/_media-querie.scss
@@ -98,6 +98,12 @@
 
 @media (max-width: 767px) {
 
+    main {
+        h1 {
+            margin-top: 0rem;
+        }
+    }
+
     .content-1 {
         @include height(440px);
         > div {
