--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -116,7 +116,11 @@ main {
       @include fontSize(32px);
       font-weight: 400;
       display: block;
+   }
+   .call {
       margin-bottom: 4rem;
+      @include fontSize(24px);
+      color: $color-context-3;
    }
    .link-scroll {
       color: $color-context-3;
@@ -275,6 +279,14 @@ main {
       border-bottom-right-radius: 5rem;
       margin-bottom: .8rem;
       overflow: hidden;
+      img {
+         @include height(397px);
+         width: auto;
+         transition: transform .2s;
+         &:hover {
+            transform: scale(1.1);
+         }
+      }
    }
    .case-content {
       display: flex;
@@ -541,7 +553,7 @@ footer {
          li {
             margin: 0;
             padding: 0;
-            &:first-child {
+            &:nth-child(1) {
                &::before {
                   @include width(24px);
                   @include height(24px);
@@ -551,11 +563,23 @@ footer {
                   position: relative;
                }
             }
-            &:last-child {
+            &:nth-child(2) {
                &::before {
                   @include width(24px);
                   @include height(24px);
                   top: .5rem;
+                  margin-left: .5rem;
+                  margin-right: .5rem;
+                  content: url(../assets/svg/ico_whatsapp_yellow.svg);
+                  position: relative;
+               }
+            }
+            &:nth-child(3) {
+               &::before {
+                  @include width(24px);
+                  @include height(24px);
+                  top: .5rem;
+                  margin-left: .5rem;
                   margin-right: .5rem;
                   content: url(../assets/svg/ico_phone.svg);
                   position: relative;
