New visual updates

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -110,6 +110,7 @@ main {
       @include fontSize(96px);
       font-weight: 900;
       margin-top: 3rem;
+      text-transform: uppercase;
    }
    p {
       color: $color-white;
@@ -234,6 +235,10 @@ main {
       border-bottom-left-radius: 128px;
       margin-bottom: 4rem;
       position: relative;
+      transition: transform .2s;
+      &:hover {
+         transform: scale(1.05);
+      }
       .ico-servico {
          position: absolute;
          @include width(64px);
@@ -256,7 +261,7 @@ main {
          color: $color-primary;
          @include fontSize(32px);
          font-weight: 700;
-         padding: 1rem;
+         padding: 3rem 1rem 1rem 1rem;
       }
       p {
          color: $color-white;
@@ -470,7 +475,9 @@ main {
 // Contato
 .img-contact {
    width: 100%;
-   overflow: hidden;
+   @include height(900px);
+   background-image: url(../assets/img/img_contato.jpg);
+   background-size: cover;
    border-top-right-radius: 1rem;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 10rem;
