--- a/scss/_media-querie.scss
+++ b/scss/_media-querie.scss
@@ -102,6 +102,9 @@
         h1 {
             margin-top: 0rem;
         }
+        .img-entrada {
+            top: 0%;
+         }
     }
 
     .content-1 {
@@ -141,11 +144,12 @@
     .quote {
         border-top-left-radius: 5rem;
         @include height(252px);
-        > div {
+        .info-quote > div {
             blockquote {
                 @include fontSize(24px);
                 line-height: 30px;
-                margin-top: 3rem;
+                margin-top: 2.5rem;
+                @include fontSize(24px);
             }
             .author {
                 h3 {
@@ -157,6 +161,7 @@
 
     .cta-section {
         @include height(252px);
+        right: 0.4%;
         > div {
             h2 {
                 margin-top: 4rem;
@@ -223,9 +228,6 @@
                 width: 100%;
                 text-align: left;
                 margin-top: 2rem;
-                li {
-                    margin-bottom: 2rem;
-                }
             }
         }
     }
