--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -24,6 +24,10 @@ header {
       align-items: center;
    }
 }
+.cta-responsivo {
+   display: none;
+   visibility: hidden;
+}
 .menu-resp-icon {
    display: none;
    visibility: hidden;
